[gd_scene load_steps=3 format=3 uid="uid://l44kfd8rk857"]

[ext_resource type="PackedScene" uid="uid://dmfk02tx0bp2s" path="res://scenes/markers/ground/flame_orb.tscn" id="1_2feic"]
[ext_resource type="Script" path="res://scenes/markers/ground/wroth_line.gd" id="1_u8mjk"]

[node name="WrothLine" type="Node3D"]
script = ExtResource("1_u8mjk")

[node name="FlameOrb" parent="." instance=ExtResource("1_2feic")]
visible = true

[node name="FlameOrb2" parent="." instance=ExtResource("1_2feic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 2.227, 9)
visible = true

[node name="FlameOrb3" parent="." instance=ExtResource("1_2feic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 2.227, -9)
visible = true
